--- a/SRS.html
+++ b/SRS.html
@@ -9,165 +9,195 @@
         </title>
     </head>
     <body>
-        <div id="front_page">
-            <h1>Software Requirements Specification</h1>
-            <h2>for</h2>
-            <h1>enter project name here</h1>
-            <h2>Version 0.0</h2>
-            <br><br><br><br>
-            <h2>Prepared by:</h2>
-
-            <h2>Group Name: "??????????"</h2>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Id</th>
-                    <th>Email</th>
-                </tr>
-                <tr>
-                    <td>Name</td>
-                    <td>Id</td>
-                    <td>Email</td>
-                </tr>
-                <tr>
-                    <td>Name</td>
-                    <td>Id</td>
-                    <td>Email</td>
-                </tr>
-                <tr>
-                    <td>Name</td>
-                    <td>Id</td>
-                    <td>Email</td>
-                </tr>
-                <tr>
-                    <td>Name</td>
-                    <td>Id</td>
-                    <td>Email</td>
-                </tr>
-            </table>
-            <br><br>
-            <h4>Instructor:</h4> Nabeel Mohammed<br>
-            <h4>Course:</h4> CSE327<br>
-            <h4>Section:</h4> 1<br>
-            <h4>Date: </h4> 04/02/2020<br>
-            <hr>
-        </div>
-        <div>
-            <h1 id="table_of_contents">Table of contents</h1>
-            <ol>
-                <li><a href="#one">Introduction</a>
-                    <ol>
-                        <li><a href="#one.one">Document Purpose</a></li>
-                        <li><a href="#one.two">Product Scope</a></li>
-                        <li><a href="#one.three">Intended Audience and Document Overview</a></li>
-                        <li><a href="#one.four">Definitions, Acronyms and Abbreviations</a></li>
-                        <li><a href="#one.five">Document Conventions</a></li>
-                        <li><a href="#one.six">References and Acknowledgements</a></li>
-                    </ol>
-                </li>
-                <li><a href="#two">Overall Description</a>
-                    <ol>
-                        <li><a href="#two.one">Product Overview</a></li>
-                        <li><a href="#two.two">Product Functionality</a></li>
-                        <li><a href="#two.three">Design and Implementation Constraints</a></li>
-                        <li><a href="#two.four">Assumptions and Dependencies</a></li>
-                    </ol>
-                </li>
-                <li><a href="#three">Specific Requirements</a>
-                    <ol>
-                        <li><a href="#three.one">External Interface Requirements</a></li>
-                        <li><a href="#three.two">Functional Requirements</a></li>
-                        <li><a href="#three.three">Use Case Model</a></li>
-                    </ol>
-                </li>
-                <li><a href="#four">Other Non-Functional Requirements</a>
-                    <ol>
-                        <li><a href="#four.one">Performance Requirements</a></li>
-                        <li><a href="#four.two">Safety and Security Requirements</a></li>
-                        <li><a href="#four.three">Software Quality Attributes</a></li>
-                    </ol>
-                </li>
-
-                <li><a href="#five"> Other Non-Functional Requirements</a>
-                </li>
-
-                <li><a href="#appendix_a">Appendix A - Data Dictionary</a>
-                </li>
-
-                <li><a href="#appendix_b">Appendix B - Group Log</a>
-                </li>
-            </ol>
-            <hr>
+        <div class="sidenav">
+          <a href="#front_page">Front Page</a>
+          <a href="#table_of_contents">Table of Contents</a>
+          <a href="#one">1 Introduction</a>
+          <a href="#one.one">1.1 Document Purpose</a>
+          <a href="#one.two">1.2 Product Scope</a>
+          <a href="#one.three">1.3 Intended Audience and Document Overview</a>
+          <a href="#one.four">1.4 Definitions, Acronyms and Abbreviations</a>
+          <a href="#one.five">1.5 Document Conventions</a>
+          <a href="#one.six">1.6 References and Acknowledgements</a>
+          <a href="#two">2 Overall Description</a>
+          <a href="#two.one">2.1 Product Overview</a>
+          <a href="#two.two">2.2 Product Functionality</a>
+          <a href="#two.three">2.3 Design and Implementation Constraints</a>
+          <a href="#two.four">2.4 Assumptions and Dependencies</a>
+          <a href="#three">3 Specific Requirements</a>
+          <a href="#three.one">3.1 External Interface Requirements</a>
+          <a href="#three.two">3.2 Functional Requirements</a>
+          <a href="#three.three">3.3 Use Case Model</a>
+          <a href="#four">4 Other Non-Functional Requirements</a>
+          <a href="#four.one">4.1 Performance Requirements</a>
+          <a href="#four.two">4.2 Safety and Security Requirements</a>
+          <a href="#four.three">4.3 Software Quality Attributes</a>
+          <a href="#five">5 Other Requirements</a>
+          <a href="#appendix_a">Appendix A - Data Dictionary</a>
+          <a href="#appendix_b">Appendix B - Group Data</a>
         </div>
 
-        <div>
-            <h1 id="one">1. Introduction</h1>
-                <h2 id="one.one">1.1 Document Purpose</h2>
-                    <p>enter content here</p>
-                <h2 id="one.two">1.2 Product Scope</h2>
-                    <p>enter content here</p>
-                <h2 id="one.three">1.3 Intended Audience and Document Overview</h2>
-                    <p>enter content here</p>
-                <h2 id="one.four">1.4 Definitions, Acronyms and Abbreviations</h2>
-                    <p>enter content here</p>
-                <h2 id="one.five">1.5 Document Conventions</h2>
-                    <p>enter content here</p>
-                <h2 id="one.six">1.6 Document References and Acknowledgements</h2>
-                    <p>enter content here</p>
-            <hr>
-        </div>
+        <div class="main">
+            <div id="front_page">
+                <h1>Software Requirements Specification</h1>
+                <h2>for</h2>
+                <h1>enter project name here</h1>
+                <h2>Version 0.0</h2>
+                <br><br><br><br>
+                <h2>Prepared by:</h2>
 
-        <div>
-            <h1 id="two">2. Overall Description</h1>
-                <h2 id="two.one">2.1 Product Overview</h2>
-                    <p>enter content here</p>
-                <h2 id="two.two">2.2 Product Functionality</h2>
-                    <p>enter content here</p>
-                <h2 id="two.three">2.3 Design and Implementation Constraints</h2>
-                    <p>enter content here</p>
-                <h2 id="two.four">2.4 Assumptions and Dependencies</h2>
-                    <p>enter content here</p>
-            <hr>
-        </div>
+                <h2>Group Name: "??????????"</h2>
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>Id</th>
+                        <th>Email</th>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td>Id</td>
+                        <td>Email</td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td>Id</td>
+                        <td>Email</td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td>Id</td>
+                        <td>Email</td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td>Id</td>
+                        <td>Email</td>
+                    </tr>
+                </table>
+                <br><br>
+                <h4>Instructor:</h4> Nabeel Mohammed<br>
+                <h4>Course:</h4> CSE327<br>
+                <h4>Section:</h4> 1<br>
+                <h4>Date: </h4> 04/02/2020<br>
+                <hr>
+            </div>
+            <div>
+                <h1 id="table_of_contents">Table of contents</h1>
+                <ol>
+                    <li><a href="#one">Introduction</a>
+                        <ol>
+                            <li><a href="#one.one">Document Purpose</a></li>
+                            <li><a href="#one.two">Product Scope</a></li>
+                            <li><a href="#one.three">Intended Audience and Document Overview</a></li>
+                            <li><a href="#one.four">Definitions, Acronyms and Abbreviations</a></li>
+                            <li><a href="#one.five">Document Conventions</a></li>
+                            <li><a href="#one.six">References and Acknowledgements</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="#two">Overall Description</a>
+                        <ol>
+                            <li><a href="#two.one">Product Overview</a></li>
+                            <li><a href="#two.two">Product Functionality</a></li>
+                            <li><a href="#two.three">Design and Implementation Constraints</a></li>
+                            <li><a href="#two.four">Assumptions and Dependencies</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="#three">Specific Requirements</a>
+                        <ol>
+                            <li><a href="#three.one">External Interface Requirements</a></li>
+                            <li><a href="#three.two">Functional Requirements</a></li>
+                            <li><a href="#three.three">Use Case Model</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="#four">Other Non-Functional Requirements</a>
+                        <ol>
+                            <li><a href="#four.one">Performance Requirements</a></li>
+                            <li><a href="#four.two">Safety and Security Requirements</a></li>
+                            <li><a href="#four.three">Software Quality Attributes</a></li>
+                        </ol>
+                    </li>
 
-        <div>
-            <h1 id="three">3. Specific Requirements</h1>
-                <h2 id="three.one">3.1 External Interface Requirements</h2>
-                    <p>enter content here</p>
-                <h2 id="three.two">3.2 Functional Requirements</h2>
-                    <p>enter content here</p>
-                <h2 id="three.three">3.3 Use Case Model</h2>
-                    <p>enter content here</p>
-            <hr>
-        </div>
+                    <li><a href="#five"> Other Non-Functional Requirements</a>
+                    </li>
 
-        <div>
-            <h1 id="four">4. Other Non-Functional Requirements</h1>
-                <h2 id="four.one">4.1 Performance Requirements</h2>
-                    <p>enter content here</p>
-                <h2 id="four.two">4.2 Safety and Security Requirements</h2>
-                    <p>enter content here</p>
-                <h2 id="four.three">4.3 Software Quality Attributes</h2>
-                    <p>enter content here</p>
-            <hr>
-        </div>
+                    <li><a href="#appendix_a">Appendix A - Data Dictionary</a>
+                    </li>
 
-        <div>
-            <h1 id="five">5. Other Requirements</h1>
-                    <p>enter content here</p>
-            <hr>
-        </div>
+                    <li><a href="#appendix_b">Appendix B - Group Log</a>
+                    </li>
+                </ol>
+                <hr>
+            </div>
 
-        <div>
-            <h1 id="appendix_a">Appendix A - Data Dictionary</h1>
-                    <p>enter content here</p>
-            <hr>
-        </div>
+            <div>
+                <h1 id="one">1. Introduction</h1>
+                    <h2 id="one.one">1.1 Document Purpose</h2>
+                        <p>enter content here</p>
+                    <h2 id="one.two">1.2 Product Scope</h2>
+                        <p>enter content here</p>
+                    <h2 id="one.three">1.3 Intended Audience and Document Overview</h2>
+                        <p>enter content here</p>
+                    <h2 id="one.four">1.4 Definitions, Acronyms and Abbreviations</h2>
+                        <p>enter content here</p>
+                    <h2 id="one.five">1.5 Document Conventions</h2>
+                        <p>enter content here</p>
+                    <h2 id="one.six">1.6 Document References and Acknowledgements</h2>
+                        <p>enter content here</p>
+                <hr>
+            </div>
 
-        <div>
-            <h1 id="appendix_b">Appendix B - Group Log</h1>
-                    <p>enter content here</p>
-            <hr>
+            <div>
+                <h1 id="two">2. Overall Description</h1>
+                    <h2 id="two.one">2.1 Product Overview</h2>
+                        <p>enter content here</p>
+                    <h2 id="two.two">2.2 Product Functionality</h2>
+                        <p>enter content here</p>
+                    <h2 id="two.three">2.3 Design and Implementation Constraints</h2>
+                        <p>enter content here</p>
+                    <h2 id="two.four">2.4 Assumptions and Dependencies</h2>
+                        <p>enter content here</p>
+                <hr>
+            </div>
+
+            <div>
+                <h1 id="three">3. Specific Requirements</h1>
+                    <h2 id="three.one">3.1 External Interface Requirements</h2>
+                        <p>enter content here</p>
+                    <h2 id="three.two">3.2 Functional Requirements</h2>
+                        <p>enter content here</p>
+                    <h2 id="three.three">3.3 Use Case Model</h2>
+                        <p>enter content here</p>
+                <hr>
+            </div>
+
+            <div>
+                <h1 id="four">4. Other Non-Functional Requirements</h1>
+                    <h2 id="four.one">4.1 Performance Requirements</h2>
+                        <p>enter content here</p>
+                    <h2 id="four.two">4.2 Safety and Security Requirements</h2>
+                        <p>enter content here</p>
+                    <h2 id="four.three">4.3 Software Quality Attributes</h2>
+                        <p>enter content here</p>
+                <hr>
+            </div>
+
+            <div>
+                <h1 id="five">5. Other Requirements</h1>
+                        <p>enter content here</p>
+                <hr>
+            </div>
+
+            <div>
+                <h1 id="appendix_a">Appendix A - Data Dictionary</h1>
+                        <p>enter content here</p>
+                <hr>
+            </div>
+
+            <div>
+                <h1 id="appendix_b">Appendix B - Group Log</h1>
+                        <p>enter content here</p>
+                <hr>
+            </div>
         </div>
     </body>
 
