--- a/Documentation/SRS.html
+++ b/Documentation/SRS.html
@@ -154,6 +154,7 @@
                         </p>
                         <p> The front end will be a series of web pages and the back end will consist of a database system and a web server to run the program. Webcam will be accessed to track the users’ face and eyes.
                         </p>
+                        <img src="overview.jpg" alt="overview">
                     <h2 id="two.two">2.2 Product Functionality</h2>
                       <ol>
                         <li> Student and Teachers portals to track multiple courses</li>
