added UI images to html file

--- a/Documentation/SRS.html
+++ b/Documentation/SRS.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -154,7 +154,10 @@
                         </p>
                         <p> The front end will be a series of web pages and the back end will consist of a database system and a web server to run the program. Webcam will be accessed to track the users’ face and eyes.
                         </p>
-                        <img src="overview.jpg" alt="overview">
+                        <figure>
+                            <img id="overview_img" src="overview.jpg" alt="overview">
+                            <figcaption>Figure 1.1: Product Overview</figcaption>
+                        </figure>
                     <h2 id="two.two">2.2 Product Functionality</h2>
                       <ol>
                         <li> Student and Teachers portals to track multiple courses</li>
@@ -200,6 +203,38 @@
                             </li>
                            <li> Statistics page - this page can only be accessed by the teacher to see detailed information of class performance.
                            </li>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/1.%20Homepage.png" alt="homepage_ui">
+                               <figcaption>Figure 2.1: Homepage</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/2.%20Login.png" alt="login_ui">
+                               <figcaption>Figure 2.2: Login page</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/3.%20Teachers%20Landing.png" alt="teachers_landing_ui">
+                               <figcaption>Figure 2.3: Teachers' Landing</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/4.%20Teachers%20Upload%20Files.png" alt="teachers_upload_ui">
+                               <figcaption>Figure 2.4: Teachers' upload file page</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/5.%20Teachers%20View%20Stats.png" alt="teachers_stats_ui">
+                               <figcaption>Figure 2.5: Teachers' view of stats for a specific document</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/6.%20Student%20Landing.png" alt="student_landing_ui">
+                               <figcaption>Figure 2.6: Students' Landing</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/7.%20Student%20View%20Class%20Document.png" alt="student_class_doc_ui">
+                               <figcaption>Figure 2.7: Students' view of documents for a specific class</figcaption>
+                           </figure>
+                           <figure>
+                               <img class="ui_image" src="../UI/Mock_UI/8.%20Student%20Opened%20Document.png" alt="student_opened_doc_ui">
+                               <figcaption>Figure 2.8: Students' view of opened document</figcaption>
+                           </figure>
                         </ol>
                            <h3> 3.1.2	Hardware Interfaces </h3>
                             This product does not require any hardware interface because it is entirely enclosed within the bounds of a web application.
