--- a/Documentation/SRS.html
+++ b/Documentation/SRS.html
@@ -203,38 +203,6 @@
                             </li>
                            <li> Statistics page - this page can only be accessed by the teacher to see detailed information of class performance.
                            </li>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/1.%20Homepage.png" alt="homepage_ui">
-                               <figcaption>Figure 2.1: Homepage</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/2.%20Login.png" alt="login_ui">
-                               <figcaption>Figure 2.2: Login page</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/3.%20Teachers%20Landing.png" alt="teachers_landing_ui">
-                               <figcaption>Figure 2.3: Teachers' Landing</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/4.%20Teachers%20Upload%20Files.png" alt="teachers_upload_ui">
-                               <figcaption>Figure 2.4: Teachers' upload file page</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/5.%20Teachers%20View%20Stats.png" alt="teachers_stats_ui">
-                               <figcaption>Figure 2.5: Teachers' view of stats for a specific document</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/6.%20Student%20Landing.png" alt="student_landing_ui">
-                               <figcaption>Figure 2.6: Students' Landing</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/7.%20Student%20View%20Class%20Document.png" alt="student_class_doc_ui">
-                               <figcaption>Figure 2.7: Students' view of documents for a specific class</figcaption>
-                           </figure>
-                           <figure>
-                               <img class="ui_image" src="../UI/Mock_UI/8.%20Student%20Opened%20Document.png" alt="student_opened_doc_ui">
-                               <figcaption>Figure 2.8: Students' view of opened document</figcaption>
-                           </figure>
                         </ol>
                            <h3> 3.1.2	Hardware Interfaces </h3>
                             This product does not require any hardware interface because it is entirely enclosed within the bounds of a web application.
@@ -270,7 +238,10 @@
                                 </ul>
                     <h2 id="three.three">3.3 Use Case Model</h2>
                         <h3>3.3.1Use case diagram</h3>
-                        <img src="../UI/use case diagram.png" >
+                        <figure>
+                            <img id="use_case_diagram" src="../UI/use case diagram.png" alt="use_case_diagram">
+                            <figcaption>Figure 2.1: Use case diagram</figcaption>
+                        </figure>
                         <h3>3.3.2 Use cases</h3>
                        <h4> 3.3.3	U1 – Create classroom</h4>
 <p>Actor - Teacher   </p>
@@ -330,11 +301,38 @@
 <ol>4.	Teacher is notified about who has read through the given course material   </ol>
 
 <h3> 3.3.8 Mock UI</h3>
-<img src="../UI/1. Homepage.png"  height="200", width="200" >
-<img src="../UI/2. Login.png" height="200", width="200" >
-<img src="../UI/3. Teachers Landing.png" height="200", width="200" >
-<img src="../UI/5. Teachers View Stats.png"  height="200", width="200">
-<img src="../UI/7. Student View Class Document.png" height="200", width="200" >
+       <figure>
+           <img class="ui_image" src="../UI/1.%20Homepage.png" alt="homepage_ui">
+           <figcaption>Figure 3.1: Homepage</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/2.%20Login.png" alt="login_ui">
+           <figcaption>Figure 3.2: Login page</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/3.%20Teachers%20Landing.png" alt="teachers_landing_ui">
+           <figcaption>Figure 3.3: Teachers' Landing</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/4.%20Teachers%20Upload%20Files.png" alt="teachers_upload_ui">
+           <figcaption>Figure 3.4: Teachers' upload file page</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/5.%20Teachers%20View%20Stats.png" alt="teachers_stats_ui">
+           <figcaption>Figure 3.5: Teachers' view of stats for a specific document</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/6.%20Student%20Landing.png" alt="student_landing_ui">
+           <figcaption>Figure 3.6: Students' Landing</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/7.%20Student%20View%20Class%20Document.png" alt="student_class_doc_ui">
+           <figcaption>Figure 3.7: Students' view of documents for a specific class</figcaption>
+       </figure>
+       <figure>
+           <img class="ui_image" src="../UI/8.%20Student%20Opened%20Document.png" alt="student_opened_doc_ui">
+           <figcaption>Figure 3.8: Students' view of opened document</figcaption>
+       </figure>
                 <hr>
             </div>
 
