fixed image paths

--- a/Documentation/SRS.html
+++ b/Documentation/SRS.html
@@ -239,7 +239,7 @@
                     <h2 id="three.three">3.3 Use Case Model</h2>
                     <h3>3.3.1Use case diagram</h3>
                     <figure>
-                        <img id="use_case_diagram" src="../UI/use case diagram.png" alt="use_case_diagram">
+                        <img id="use_case_diagram" src="UI/use case diagram.png" alt="use_case_diagram">
                         <figcaption>Figure 2.1: Use case diagram</figcaption>
                     </figure>
                     <h3>3.3.2 Use cases</h3>
@@ -302,35 +302,35 @@
 
                     <h3> 3.3.8 Mock UI</h3>
                     <figure>
-                        <img class="ui_image" src="../UI/1.%20Homepage.png" alt="homepage_ui">
+                        <img class="ui_image" src="UI/1.%20Homepage.png" alt="homepage_ui">
                         <figcaption>Figure 3.1: Homepage</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/2.%20Login.png" alt="login_ui">
+                        <img class="ui_image" src="UI/2.%20Login.png" alt="login_ui">
                         <figcaption>Figure 3.2: Login page</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/3.%20Teachers%20Landing.png" alt="teachers_landing_ui">
+                        <img class="ui_image" src="UI/3.%20Teachers%20Landing.png" alt="teachers_landing_ui">
                         <figcaption>Figure 3.3: Teachers' Landing</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/4.%20Teachers%20Upload%20Files.png" alt="teachers_upload_ui">
+                        <img class="ui_image" src="UI/4.%20Teachers%20Upload%20Files.png" alt="teachers_upload_ui">
                         <figcaption>Figure 3.4: Teachers' upload file page</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/5.%20Teachers%20View%20Stats.png" alt="teachers_stats_ui">
+                        <img class="ui_image" src="UI/5.%20Teachers%20View%20Stats.png" alt="teachers_stats_ui">
                         <figcaption>Figure 3.5: Teachers' view of stats for a specific document</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/6.%20Student%20Landing.png" alt="student_landing_ui">
+                        <img class="ui_image" src="UI/6.%20Student%20Landing.png" alt="student_landing_ui">
                         <figcaption>Figure 3.6: Students' Landing</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/7.%20Student%20View%20Class%20Document.png" alt="student_class_doc_ui">
+                        <img class="ui_image" src="UI/7.%20Student%20View%20Class%20Document.png" alt="student_class_doc_ui">
                         <figcaption>Figure 3.7: Students' view of documents for a specific class</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="../UI/8.%20Student%20Opened%20Document.png" alt="student_opened_doc_ui">
+                        <img class="ui_image" src="UI/8.%20Student%20Opened%20Document.png" alt="student_opened_doc_ui">
                         <figcaption>Figure 3.8: Students' view of opened document</figcaption>
                     </figure>
                     <hr>
