--- a/Documentation/SRS.html
+++ b/Documentation/SRS.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -9,8 +9,6 @@
         </title>
     </head>
     <body>
-        <button id="open_pdf" onclick="generate(); changeWidth(this.id);">Generate PDF</button>
-        <button id="close_pdf" onclick=" changeWidth(this.id);">Close pdf</button>
         <div id="html-2-pdfwrapper">
 
             <div class="sidenav">
@@ -155,7 +153,7 @@
                     <p> The front end will be a series of web pages and the back end will consist of a database system and a web server to run the program. Webcam will be accessed to track the users’ face and eyes.
                     </p>
                     <figure>
-                        <img id="overview_img" src="overview.jpg" alt="overview">
+                        <img id="overview_img"  alt="overview">
                         <figcaption>Figure 1.1: Product Overview</figcaption>
                     </figure>
                     <h2 id="two.two">2.2 Product Functionality</h2>
@@ -239,7 +237,7 @@
                     <h2 id="three.three">3.3 Use Case Model</h2>
                     <h3>3.3.1Use case diagram</h3>
                     <figure>
-                        <img id="use_case_diagram" src="UI/use case diagram.png" alt="use_case_diagram">
+                        <img id="use_case_diagram"  alt="use_case_diagram">
                         <figcaption>Figure 2.1: Use case diagram</figcaption>
                     </figure>
                     <h3>3.3.2 Use cases</h3>
@@ -302,35 +300,35 @@
 
                     <h3> 3.3.8 Mock UI</h3>
                     <figure>
-                        <img class="ui_image" src="UI/1.%20Homepage.png" alt="homepage_ui">
+                        <img id="homepage" class="ui_image"  alt="homepage_ui">
                         <figcaption>Figure 3.1: Homepage</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/2.%20Login.png" alt="login_ui">
+                        <img id="login" class="ui_image" alt="login_ui">
                         <figcaption>Figure 3.2: Login page</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/3.%20Teachers%20Landing.png" alt="teachers_landing_ui">
+                        <img id="teachers_landing" class="ui_image" alt="teachers_landing_ui">
                         <figcaption>Figure 3.3: Teachers' Landing</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/4.%20Teachers%20Upload%20Files.png" alt="teachers_upload_ui">
+                        <img id="teachers_upload" class="ui_image"  alt="teachers_upload_ui">
                         <figcaption>Figure 3.4: Teachers' upload file page</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/5.%20Teachers%20View%20Stats.png" alt="teachers_stats_ui">
+                        <img id="teachers_view_stats" class="ui_image" alt="teachers_stats_ui">
                         <figcaption>Figure 3.5: Teachers' view of stats for a specific document</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/6.%20Student%20Landing.png" alt="student_landing_ui">
+                        <img id="student_landing" class="ui_image"  alt="student_landing_ui">
                         <figcaption>Figure 3.6: Students' Landing</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/7.%20Student%20View%20Class%20Document.png" alt="student_class_doc_ui">
+                        <img id="student_view_doc" class="ui_image" alt="student_class_doc_ui">
                         <figcaption>Figure 3.7: Students' view of documents for a specific class</figcaption>
                     </figure>
                     <figure>
-                        <img class="ui_image" src="UI/8.%20Student%20Opened%20Document.png" alt="student_opened_doc_ui">
+                        <img id="student_opened_doc" class="ui_image" alt="student_opened_doc_ui">
                         <figcaption>Figure 3.8: Students' view of opened document</figcaption>
                     </figure>
                     <hr>
@@ -372,8 +370,10 @@
             </div>
         </div>
 
-        <script src='dist/jspdf.min.js'></script>
-        <script src='gen_pdf.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+
+        <script src="image-uri.js"></script>
+        <script src="pdf_handling.js"></script>
     </body>
 
 </html>
