added design descriptions

--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -113,6 +113,37 @@
             </div>
             <div id="desc_design">
                 <h1 id="three">3 Description of Design Components</h1>
+                <ol>
+                    <li>Server side</li>
+                        <ol>
+                            <li>Django framework: the python web framework that will be used to handle all the backend functionality. This framework handles a lot of the functionality that we would otherwise have to implement from scratch. This includes user authentication, content administration, security, commonly used templates, as well as a built in Object Relational Mapper (ORM).</li>
+                            <br>
+
+                            <li>MySQL database: a popular SQL relational database that our team is familiar with. Rather than writing raw queries, which are error prone, we will use Django's ORM for all data interaction processes with a MySQL database.</li>
+                            <br>
+
+                            <li>OpenCV (Facial recognition API): OpenCV is a real-time computer vision library providing a multitude of different features. It contains a facial recognition API with bindings through python, the programming language of choice for our backend functionality.</li>
+                            <br>
+
+                            <li>Firebase: for some of the backend functionality within the android app of our product, we may require the use of services such as Firebase (e.g. some APIs are only available through Firebase).</li>
+                            <br>
+                        </ol>
+                    <li>Client Side</li>
+                        <ol>
+                            <li>HTML: the markup language for implementing the components viewable by the users of our product.</li>
+                            <br>
+
+                            <li>CSS: will be used to style the components on the website, making it more appealing to the end user.</li>
+                            <br>
+
+                            <li>Javascript: For manipulating the components of webpages, handling events, creating animations etc. We may require the use of some javascript frameworks such as jQuery to simplify repetitive front end manipulations.</li>
+                            <br>
+
+                            <li>Front end framework: We expect to be able to design a sufficiently captivating user-interface by using CSS and javascript. However, if the need arises, we may use a front-end framework such as React.</li>
+                            <br>
+
+                        </ol>
+                </ol>
                 <hr>
             </div>
             <div id="high_level_design">
