--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -136,11 +136,13 @@
                             <li>CSS: will be used to style the components on the website, making it more appealing to the end user.</li>
                             <br>
 
-                            <li>Javascript: For manipulating the components of webpages, handling events, creating animations etc. We may require the use of some javascript frameworks such as jQuery to simplify repetitive front end manipulations.</li>
+                            <li>Javascript: for manipulating the components of webpages, handling events, creating animations etc. We may require the use of some javascript frameworks such as jQuery to simplify repetitive front end manipulations.</li>
                             <br>
 
-                            <li>Front end framework: We expect to be able to design a sufficiently captivating user-interface by using CSS and javascript. However, if the need arises, we may use a front-end framework such as React.</li>
+                            <li>Front end framework: we expect to be able to design a sufficiently captivating user-interface by using CSS and javascript. However, if the need arises, we may use a front-end framework such as React.</li>
                             <br>
+
+                            <li>Webgazer (Eye tracking API): this is an open source eye tracking API with a small footprint. Consequently, this can be directly embedded within the front-end functionality of our website using javascript.</li>
 
                         </ol>
                 </ol>
