added jQuery to design description

--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -136,7 +136,10 @@
                             <li>CSS: will be used to style the components on the website, making it more appealing to the end user.</li>
                             <br>
 
-                            <li>Javascript: for manipulating the components of webpages, handling events, creating animations etc. We may require the use of some javascript frameworks such as jQuery to simplify repetitive front end manipulations.</li>
+                            <li>Javascript: for manipulating the components of webpages, handling events, creating animations etc.</li>
+                            <br>
+
+                            <li>jQuery (javascript library): allows HTML traversal, manipulation, event handling and other tasks to be done in a simpler fashion.</li>
                             <br>
 
                             <li>Front end framework: we expect to be able to design a sufficiently captivating user-interface by using CSS and javascript. However, if the need arises, we may use a front-end framework such as React.</li>
