added component design diagram

--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -153,6 +153,11 @@
             </div>
             <div id="high_level_design">
                 <h1 id="four">4 High Level Component Design</h1>
+                <br>
+                <figure>
+                    <img src="component-design.jpg" alt="component-design">
+                    <figcaption>Fig 1: High level component diagram</figcaption>
+                </figure>
                 <hr>
             </div>
             <div id="class_diagrams">
