added implementation plan

--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -109,6 +109,11 @@
             </div>
             <div id="doc_conventions">
                 <h1 id="two">2 Document Conventions</h1>
+                <ol>
+                    <li>UI - user interface</li>
+                    <li>DB - database</li>
+                    <li>API - application programming interface</li>
+                </ol>
                 <hr>
             </div>
             <div id="desc_design">
@@ -174,6 +179,28 @@
             </div>
             <div id="implementation_plan">
                 <h1 id="seven">7 Implementation plan</h1>
+                <ul>
+                    <li>Implementation of the website version</li>
+                        <ol>
+                            <li>Implement a minimial version of the UI.</li>
+                            <li>Implement the core backend functionality for the following features:</li>
+                               <ul>
+                                    <li>Teacher's login</li>
+                                    <li>Student's login</li>
+                                    <li>Classrooms</li>
+                                    <li>Teachers being able to send documents to students</li>
+                                    <li>Authenticating student users through facial recognition</li>
+                                    <li>Storing data on students' viewing of documents (including eye tracking data)</li>
+                                    <li>Generating statistics on each student based on stored data</li>
+                                </ul>
+                            <li>Extensively test the core functionality.</li>
+                            <li>Finish the UI design</li>
+                        </ol>
+                    <li>Implementation of the android app version</li>
+                        <ol>
+                            <li>Will be done similarly to the website version.</li>
+                        </ol>
+                </ul>
                 <hr>
             </div>
         </div>
