updated implementation plan

--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -195,6 +195,7 @@
                                 </ul>
                             <li>Extensively test the core functionality.</li>
                             <li>Finish the UI design</li>
+                            <li>Implement any remaining backend functionality.</li>
                         </ol>
                     <li>Implementation of the android app version</li>
                         <ol>
