--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -105,6 +105,14 @@
             </div>
             <div id="introduction">
                 <h1 id="one">1 Introduction</h1>
+                <p>This document provides a detailed description of the architecture of our product which is an online learning portal for teachers and students.</p>
+                <p>Section 2 lists the abbreviations used within the document.</p>
+                <p>All the components that will be used in building the product have been outlined in section 3. This includes the various technologies, programming languages, and tools used in the server side and the client side, as well as frameworks, libraries and APIs.</p>
+                <p>Section 4 contains a high level diagram of each of the main components which taken together will form the complete system. It shows the interactions between the different frameworks and subsystems, providing an overview of the main processes.</p>
+                <p>Class diagrams along with descriptions are given in section 5. These provide an overview of the different classes / entities of our system. This includes the attributes of each class and their corresponding methods. Inherited subclasses and specialisations are also shown.</p>
+                <p>Section 6 contains an ER diagram for the data model along with corresponding tables. This is consistent with the class diagrams, and shows the attributes of the different entities along with the relationships among them.</p>
+                <p>Section 7 contains a tentative implementation plan covering the order in which each feature is going to be built.</p>
+
                 <hr>
             </div>
             <div id="doc_conventions">
@@ -113,6 +121,7 @@
                     <li>UI - user interface</li>
                     <li>DB - database</li>
                     <li>API - application programming interface</li>
+                    <li>ER - entity relationship</li>
                 </ol>
                 <hr>
             </div>
