added ER diagram

--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -183,6 +183,12 @@
             <div id="db_design">
                 <h1 id="six">6 Database Design</h1>
                 <h2 id="six.one">6.1 Entity Relationship (ER) Diagram</h2>
+
+                <figure>
+                    <img src="ER.jpg" alt="ER_diagram">
+                    <figcaption>Fig 3: ER diagram</figcaption>
+                </figure>
+
                 <h2 id="six.two">6.2 Tables</h2>
                 <hr>
             </div>
