--- a/Documentation/SDS/SDS.html
+++ b/Documentation/SDS/SDS.html
@@ -186,10 +186,14 @@
 
                 <figure>
                     <img src="ER.jpg" alt="ER_diagram">
-                    <figcaption>Fig 3: ER diagram</figcaption>
+                    <figcaption>Fig 3.1: ER diagram</figcaption>
                 </figure>
 
                 <h2 id="six.two">6.2 Tables</h2>
+                <figure>
+                    <img src="tables.jpg" alt="tables">
+                    <figcaption>Fig 3.2: Tables mapped from ER diagram</figcaption>
+                </figure>
                 <hr>
             </div>
             <div id="implementation_plan">
